HMAN-25 Contract test classes created